<resources>
    <string-array name="status_array">
        <item>Active</item>
        <item>Inactive</item>
        <item>Completed</item>
    </string-array>
    <string-array name="status_array2">
        <item>Active</item>
        <item>Inactive</item>
        <item>Completed</item>
    </string-array>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="app_name">LearnLeaf</string>
    <string name="back">Back</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="password2">Password:</string>
    <string name="email2">Email:</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="confirm2">Confirm:</string>
    <string name="name2">Name:</string>
    <string name="log_out">Log Out</string>
    <string name="logo">Logo</string>
    <string name="log_in_here">Log in Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="banner">Banner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FragLogOut">Log Out</string>
    <string name="profile">Profile</string>
    <string name="projects">Projects</string>
    <string name="subjects">Subjects</string>
    <string name="tasks">Tasks</string>
    <string name="archives">Archives</string>
    <string name="your_subjects_will_appear_here">Your subjects will appear here</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_tasks_found">No tasks found</string>
    <string name="project">"Project: "</string>
    <string name="subject">"Subject: "</string>
    <string name="priority">"Priority: "</string>
    <string name="status">"Status: "</string>

</resources>