<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/username"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="224dp"
        android:background="@color/white"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#006064"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/email"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#006064"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:background="@color/white"
        android:hint="@string/confirm"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="#006064"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="#006064"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />

    <nu.aaro.gustav.passwordstrengthmeter.PasswordStrengthMeter
        android:id="@+id/passwordStrengthMeter"
        android:layout_width="180dp"
        android:layout_height="22dp"
        android:layout_marginTop="68dp"
        app:animateChanges="true"
        app:animationDuration="300"
        app:labelTextSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:showStrengthBar="true"
        app:showStrengthLabel="true"
        app:strengthBarHeight="5dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="@string/submit"
        android:textColor="@color/MineralGreen"
        app:backgroundTint="@color/Opal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/log_in_here"
        android:textColor="@color/Orchid"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="389dp"
        android:layout_height="71dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>