<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="389dp"
        android:layout_height="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner_logo" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        android:textColor="@color/MineralGreen"
        app:backgroundTint="@color/Opal"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:text="@string/sign_up"
        android:textColor="@color/Orchid"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="124dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="#006064"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="124dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="#006064"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>